--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<a class="navbar-brand" href="#">
+		<a class="navbar-brand" href="{%url 'index' %}">
 			<img src="{% static 'img/Logo.svg' %}" alt="CakeBake">
 		</a>
 		<div class="collapse navbar-collapse justify-content-end" id="navbar">
@@ -51,7 +51,7 @@
 						<!--метка на иконке, убрать класс d-none чтоб появилась-->
 						<span class="position-absolute translate-middle badge rounded-pill cake__bg_pink fs_8 d-none">1</span>
 					</a>
-					<a class="nav-link fw-lighter cake_grey fs_12 d-none" href="#">
+					<a class="nav-link fw-lighter cake_grey fs_12" href="{% url 'profile' %}">
 						Ирина
 					</a>
 				</li>
