--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,12 @@
 								<path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
 								<path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
 							</svg>
-							{{Step === 'Number' ? 'Введите номер' : 'Введите код'}}</error-message></small>
+							[[Step === 'Number' ? 'Введите номер' : 'Введите код']]</error-message></small>
 						<error-message name="phone_format" class="fs_12 cake_pink text-center position-absolute bottom-0"></error-message>
 						<error-message name="code_format" class="fs_12 cake_pink text-center position-absolute bottom-0"></error-message>
 					</v-form>
 					<div class="modal-footer d-flex flex-column justify-content-between align-items-center text-center border-0 mx-5">
-						<p class="fs_12 cake_grey">{{Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности` : Step === 'Code' ? `Осталось времени: 05:00` : ``}}</p>
+						<p class="fs_12 cake_grey">[[Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности` : Step === 'Code' ? `Осталось времени: 05:00` : ``]]</p>
 						<a href="#" v-if="Step === `Code`" @click.prevent="ToRegStep1" class="text-decoration-none cake_pink fs_12">изменить данные</a>
 					</div>
 					{% endverbatim %}
@@ -126,18 +126,15 @@
 					<error-message name="form" class="from__alert"></error-message>
 					<error-message name="topping" class="from__alert"></error-message>
 				</span>
-						<span class="z-index-1 fs_40 cake_pink text-end mt-5" id="cost">{{ Cost }}₽</span>
+						<span class="z-index-1 fs_40 cake_pink text-end mt-5" id="cost">[[ Cost ]]₽</span>
 					</div>
 					<div class="d-flex align-items-center flex-wrap mb-3">
 						<span class="me-3 fs_40 cake_blue">Количество уровней</span>
-						<v-field v-model="Levels" type="radio" name="lvls" id="num1" value="1" class="d-none cake__input"></v-field>
-						<label for="num1" class="mx-2 px-3 py-1 cake_grey cake__label">1</label>
-						<v-field v-model="Levels" type="radio" name="lvls" id="num2" value="2" class="d-none cake__input"></v-field>
-						<label for="num2" class="mx-2 px-3 py-1 cake_grey cake__label">2</label>
-						<v-field v-model="Levels" type="radio" name="lvls" id="num3" value="3" class="d-none cake__input"></v-field>
-						<label for="num3" class="mx-2 px-3 py-1 cake_grey cake__label">3</label>
+						{% for i in all_context.Levels|slice:"1:" %}
+						<v-field v-model="Levels" type="radio" name="lvls" id="num{{ i }}" value="{{ i }}" class="d-none cake__input"></v-field>
+						<label for="num{{ i }}" class="mx-2 px-3 py-1 cake_grey cake__label">{{ i }}</label>
+						{% endfor %}
 					</div>
-
 					<div class="d-flex align-items-center flex-wrap mb-3">
 						<span class="me-3 fs_40 cake_blue">Форма</span>
 						<v-field v-model="Form" type="radio" name="form" id="form1" value="1" class="d-none cake__input"></v-field>
@@ -212,9 +209,9 @@
 
 			<section class="row pt-header" id="step4" v-if="Designed">
 				<form class="d-none">
-					<input v-model="Levels" value="1" type="radio" name="LEVELS">
-					<input v-model="Levels" value="2" type="radio" name="LEVELS">
-					<input v-model="Levels" value="3" type="radio" name="LEVELS">
+					{% for i in all_context.Levels|slice:"1:" %}
+					<input v-model="Levels" value="{{ forloop.counter }}" type="radio" name="LEVELS">
+					{% endfor %}
 					<br>
 					<input v-model="Form" value="1" type="radio" name="FORM">
 					<input v-model="Form" value="2" type="radio" name="FORM">
@@ -286,20 +283,18 @@
 								</div>
 							</div>
 							<div class="col-12 col-lg-4 d-flex justify-content-center justify-content-lg-end">
-								{% verbatim %}
 								<div class="cake__card p-4 position-relative cake_grey">
 									<span class="cake__badge rounded-pill">?</span>
-									<span>Количество уровней: {{ DATA.Levels[Levels] }}</span>
-									<span>Форма уровней: {{ DATA.Forms[Form] }}</span>
-									<p>Топинг: {{ DATA.Toppings[Topping] }}</p>
+									<span>Количество уровней: [[ DATA.Levels[Levels] ]]</span>
+									<span>Форма уровней: [[ DATA.Forms[Form] ]]</span>
+									<p>Топинг: [[ DATA.Toppings[Topping] ]]</p>
 									<span>Дополнительно:</span>
 									<ul>
-										<li>Ягоды: {{ DATA.Berries[Berries] }}</li>
-										<li>Декор: {{ DATA.Decors[Decor] }}</li>
+										<li>Ягоды: [[ DATA.Berries[Berries] ]]</li>
+										<li>Декор: [[ DATA.Decors[Decor] ]]</li>
 									</ul>
-									<span>{{ Words === '' ? 'Без надписи' : Words }}</span>
+									<span>[[ Words === '' ? 'Без надписи' : Words ]]</span>
 								</div>
-								{% endverbatim %}
 							</div>
 						</div>
 						<div class="d-flex flex-column position-relative pb-4">
@@ -330,7 +325,7 @@
 							</div>
 							<div class="col-12 col-md-6 d-flex flex-column align-items-center align-items-md-end mt-3 mt-md-0">
 								<div class="d-flex">
-									<span class="cake_pink fs_40 fw-bold me-2">Итого: {{ Cost }}₽</span>
+									<span class="cake_pink fs_40 fw-bold me-2">Итого: [[ Cost ]]₽</span>
 								</div>
 								<button type="submit" class="btn btn_hover text-white rounded-pill mt-3 px-5 shadow-none cake__button cake__bg_pink">К оплате</button>
 							</div>
@@ -343,6 +338,9 @@
 </main>
 {% endblock %}
 {% block extra_scripts %}
+<script>
+    window.INITIAL_DATA = {{all_context|safe }};
+</script>
 <script src="{% static 'js/index.js' %}"></script>
 <script src="{% static 'js/registration.js' %}"></script>
 {% endblock %}
