--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,15 +4,16 @@
 <div class="container mt-header mb-5">
 	<div class="row mt-5">
 		<div class="col-12 col-xxl-6 d-flex justify-content-center">
-			<div><img src="img/Cake2.png" alt=""></div>
+			<div><img src="{% static 'img/cake2.png' %}" alt=""></div>
 		</div>
 		<div class="col-12 col-xxl-6 d-flex flex-column justify-content-center align-items-center align-items-xxl-start" id="LK">
-			<form class="d-none">
-				<input v-model="Name" name="NAME">
-				<input v-model="Phone" name="PHONE">
-				<input v-model="Email" name="EMAIL">
+			<form class="d-none" method="POST" action="{% url 'update_profile' %}">
+				{% csrf_token %}
+				<input v-model="Name" name="name">
+				<input v-model="Phone" name="phonenumber">
+				<input v-model="Email" name="email">
 				<button type="submit" ref="HiddenFormSubmit">Apply Changes</button>
-			</form>
+   	 		</form>
 			<v-form :validation-schema="Schema" @submit="ApplyChanges">
 				<div class="d-flex w-100 justify-content-center justify-content-xxl-between align-items-center">
 					<h1 class="font_Gogh fs_40 cake_blue">Личный кабинет</h1>
@@ -130,6 +131,6 @@
 </div>
 {% endblock %}
 {% block extra_scripts %}
-<script src="lk.js"></script>
+<script src="{% static 'js/lk.js' %}"></script>
 {% endblock %}
-<script src="lk.js"></script>
+<script src="{% static 'js/lk.js' %}"></script>
