--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,7 +4,7 @@
 <div class="container mt-header mb-5">
 	<div class="row mt-5">
 		<div class="col-12 col-xxl-6 d-flex justify-content-center">
-			<div><img src="{% static 'img/cake2.png' %}" alt=""></div>
+			<div><img src="{% static 'img/Cake2.png' %}" alt=""></div>
 		</div>
 		<div class="col-12 col-xxl-6 d-flex flex-column justify-content-center align-items-center align-items-xxl-start" id="LK">
 			<form class="d-none" method="POST" action="{% url 'update_profile' %}">
@@ -12,6 +12,7 @@
 				<input v-model="Name" name="name">
 				<input v-model="Phone" name="phonenumber">
 				<input v-model="Email" name="email">
+				<input v-model="Address" name="ADDRESS">
 				<button type="submit" ref="HiddenFormSubmit">Apply Changes</button>
    	 		</form>
 			<v-form :validation-schema="Schema" @submit="ApplyChanges">
@@ -39,6 +40,9 @@
 						<li class="list-group-item border-0 ps-0">
 							<h1 class="fs_40 cake_blue">Почта</h1>
 						</li>
+						<li class="list-group-item border-0 ps-0">
+							<h1 class="fs_40 cake_blue">Адрес</h1>
+						</li>
 					</ul>
 					<ul class="list-group">
 						<li class="list-group-item border-0 py-61 position-relative">
@@ -52,6 +56,10 @@
 						<li class="list-group-item border-0 py-61 position-relative">
 							<v-field v-model="Email" type="text" name="email_format" id="email" :readonly="!Edit" class="form-control my-2 cake__textinput"></v-field>
 							<error-message name="email_format" class="position-absolute bottom-0 cake_pink fs_12"></error-message>
+						</li>
+						<li class="list-group-item border-0 py-61 position-relative">
+							<v-field v-model="Address" type="text" name="address_format" id="address" :readonly="!Edit" class="form-control my-2 cake__textinput"></v-field>
+							<error-message name="address_format" class="position-absolute bottom-0 cake_pink fs_12"></error-message>
 						</li>
 					</ul>
 				</div>
@@ -131,6 +139,6 @@
 </div>
 {% endblock %}
 {% block extra_scripts %}
-<script src="{% static 'js/lk.js' %}"></script>
+<script src="{% static 'js/lk.js'%}"></script>
 {% endblock %}
-<script src="{% static 'js/lk.js' %}"></script>
+
