--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,15 @@
 						<error-message name="name_format" class="fs_12 cake_pink text-center position-absolute bottom-0"></error-message>
 					</v-form>
 					<div class="modal-footer d-flex flex-column justify-content-between align-items-center text-center border-0 mx-5">
-						<p class="fs_12 cake_grey">[[Step === `Number` ? `Нажимая на кнопку, вы соглашаетесь на обработку персональных данных в соответствии с политикой конфиденциальности` : Step === 'Code' ? `Осталось времени: 05:00` : ``]]</p>
-						<a href="#" v-if="Step === `Code`" @click.prevent="ToRegStep1" class="text-decoration-none cake_pink fs_12">изменить данные</a>
+						<p class="fs_12 cake_grey" v-if="Step === 'Number'">
+							Нажимая на кнопку, вы соглашаетесь на обработку
+							<a href="{% static 'pdf/agreed.pdf' %}" target="_blank"
+							   style="color: inherit; text-decoration: underline;">
+								персональных данных
+							</a>
+							в соответствии с политикой конфиденциальности
+						</p>
+						<a href="#" v-if="Step === 'Name'" @click.prevent="Reset" class="text-decoration-none cake_pink fs_12">изменить данные</a>
 					</div>
 				</div>
 			</div>
