--- a/templates/expense_change_list.html
+++ b/templates/expense_change_list.html
@@ -4,7 +4,7 @@
 {% block content_title %}
 <div style="display: flex; justify-content: space-between; align-items: center;">
     {{ block.super }}
-    <div style="font-size: 18px;">Общая сумма Дохода: {{ total }} руб.</div>
+    <div style="font-size: 18px;">Общая сумма Дохода: {{ total_amount }} руб.</div>
     <div>  </div>
 </div>
 {% endblock %}
